--- a/src/MainFrame/MainFrame.css
+++ b/src/MainFrame/MainFrame.css
@@ -108,6 +108,8 @@ body, html {
 
         .nav-item {
           margin-bottom: 10px;
+         
+          
         }
 
         .nav-link {
@@ -122,6 +124,7 @@ body, html {
 
         .nav-link:hover {
           color: #22c55e; 
+          background-color: #b9f1df;
         }
 
         
