--- a/src/MainFrame/MainFrame.css
+++ b/src/MainFrame/MainFrame.css
@@ -358,3 +358,80 @@ body.dark-mode .card {
   border: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
+
+.mini-sidebar {
+  width: 100px;
+  background-color: #f9fafb;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mini-nav-icons {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+.mini-nav-icons li {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.mini-icon-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mini-icon {
+  width: 24px;
+  height: 24px;
+  color: #4b5563; /* gray-700 */
+}
+
+.mini-label {
+  font-size: 12px;
+  color: #6b7280; /* gray-500 */
+  margin-top: 4px;
+}
+
+.mini-nav-icons li:hover .mini-icon,
+.mini-nav-icons li:hover .mini-label {
+  color: #a7f3d0;
+  cursor: pointer;
+}
+
+.mini-nav-icons li:first-child {
+  background-color: #b9f1df;
+  border-radius: 5px;
+  border-right: 5px solid green;
+  transition: background-color 0.2s, color 0.2s, border-right-color 0.2s;
+}
+
+
+
+/* Dark mode support */
+body.dark-mode .mini-sidebar {
+  background-color: #111827;
+}
+
+body.dark-mode .mini-icon {
+  color: #e5e7eb;
+}
+
+body.dark-mode .mini-icon:hover {
+  color: #a7f3d0;
+}
+
+.right-section.mini {
+  margin-left: 0px;
+}
+
+@media (min-width: 768px) {
+  .right-section.shifted {
+    margin-left: 150px; 
+  }
+}
